--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,8 @@ h1{
   font-family: 'Cantata One', serif;
   text-align: right;
   color: white;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+  text-shadow: 4px 3px 2px rgba(150, 150, 150, 1);
 }
 h2{
   font-family: 'Cantata One', serif;
@@ -16,8 +17,15 @@ h5{
   padding-right: 40px;
   color: white;
   text-align: right;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+   /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+   text-shadow: 4px 3px 2px rgba(150, 150, 150, 1);
 
+}
+
+.subtitle{
+  font-family: 'Cantata One', serif;
+  text-align: center;
+  color: white;
 }
 
 img{
@@ -64,6 +72,10 @@ nav a{
   width: 60px;
   height: 60px;
 }
+
+img icon:hover{
+  color: white;
+}
 .nav-wrapper{
   opacity: 2;
 }
@@ -82,4 +94,19 @@ nav a{
 #icons{
   padding-top: 5%;
   padding-right: 80px;
+}
+
+#email{
+  font-size: 30px;
+  color: white;
+}
+.mustard{
+  color: #FCA301;
+}
+.letter{
+  color:white;
+  font-size: 55px;
+}
+#thanks{
+  font-size: 30px;
 }
