--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,7 @@ h5{
   color: white;
   text-align: right;
    /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
-   text-shadow: 4px 3px 2px rgba(150, 150, 150, 1);
+   text-shadow: 4px 2px 2px rgba(150, 150, 150, 1);
 
 }
 
@@ -32,7 +32,12 @@ img{
   width: 100%;
 }
 .projects{
-  width: 100%;
+  /*margin-top: 30px;*/
+  /*border: solid 1px black;*/
+  height: 350px;
+  width: 450px;
+  /*position: relative;*/
+
 }
 .slider {
   width: 900px;
@@ -109,4 +114,38 @@ img icon:hover{
 }
 #thanks{
   font-size: 30px;
+}
+
+.imgWrap{
+  position: relative;
+  height: 300px;
+  width: 250px;
+}
+
+.project-description{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(29, 106, 154, 0.72);
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  width: 100%;
+}
+
+.imgWrap:hover .project-description{
+  visibility: visible;
+  opacity: 1;
+}
+
+#profile-pic{
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+}
+.about{
+  font-size: 20px;
+  font-family: 'Cantata One', serif;
 }
